# automatic-octo-enigma

./: .gitignore  CMakeLists.txt  Makefile  README.md  bee.hex  blackice-ii.pcf  bram_axi.v  bram_test.hex  bram_test.v  catch_main.cpp  chip.v  cpu.hex  cpu.v  cpu_test.cpp  dac_test.pcf  dac_test.v  loopback.pcf  loopback.v  loopback_sim.cpp  loopback_tb.v  output_pin_with_enable.v  palette.v  pmod.txt  queue.v  queue_tb.v  reset.v  skidbuffer.sby  skidbuffer.v  sram_axi.sby  sram_axi.v  sram_axi_tb.v  sram_axi_top.v  sram_queue.v  sram_queue_chip.v  sram_queue_tb.v  synth_oneoff.sh  test_uart_debug.sh  to_hex.v  tristate_test.pcf  tristate_test.v  (+12 more)
data/: convert.py  convert_palette.py  duck-palette.py  duck.hex  image.hex  image.kra  image.xcf  image2.hex  rabbit-palette.py  rabbit.hex
